# rust-sql-engine

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: ast.rs  catalog.rs  catalog_manager.rs  data_manager.rs  lexer.rs  lib.rs  parser.rs  query_checker.rs  query_executer.rs  query_typer.rs  query_validator.rs  type_checker.rs
src/ast/: create_table.rs  delete_query.rs  insert_query.rs  mod.rs  select_query.rs
src/parser/: ast.rs  mod.rs
src/sql/: ast.rs  error.rs  lexer.rs  parser.rs  rules.rs  sql.rs  statement.rs  tokenizer.rs
src/sql_ast/: sql_parser.rs
src/sql_ast/test/: sql_parser_unit_tests.rs
src/tests/: ast_unit_tests.rs  lexer_unit_tests.rs  parser_unit_tests.rs  scanner_unit_tests.rs  statements_unit_tests.rs  tokenizer_unit_tests.rs  unit_tests.rs
test/: catalog_manager.rs  catalog_manager_tests.rs  data_manager.rs  database_object_tests.rs  lexer.rs  lexer_tests.rs  lexer_unit_tests.rs  lib.rs  parser.rs  parser_tests.rs  populator.rs  query_checker.rs  query_executer.rs  query_typer.rs  query_validator.rs  type_checker.rs
test/integration/: mod.rs  query_executer.rs  query_execution_flow.rs
tests/: evaluator_unit_tests.rs  lexer_unit_tests.rs  parser_unit_tests.rs  unit_tests.rs
