[package]
name = "rust-sql-engine"
version = "0.0.1-SNAPSHOT"
authors = ["Alex-Diez <alexvic.amatory@gmail.com>"]

[lib]
name = "sql"
path = "src/lib.rs"
plugin = true

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[dependencies]
clippy = "*"

[dev-dependencies]
stainless = "*"
expectest = "*"